--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>🔴 FORTNITE RELOAD w/ Miniminter, Ginge & Jakey !Fortnite #EpicPartner #Ad</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">14 minutes ago</div>
+                        <div class="date">39 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Turn Depression Around | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Stop Misusing Keltner Channels ❌ (You’re Doing It Wrong)</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the World but Not Of It</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN PLAY FORTNITE UNTIL WE WIN</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -420,7 +420,7 @@
                     <div class="video-info">
                         <h3>Pizza tutoria in few sec @KyleIstook</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -640,7 +640,7 @@
                     <div class="video-info">
                         <h3>Teaching   a Subscriber  Pizza techniques</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -805,7 +805,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2228,7 +2228,7 @@
                     <div class="video-info">
                         <h3>Taco night left overs make an amazing pizza sandwich!</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Stop Misusing Keltner Channels ❌ (You’re Doing It Wrong)</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Turn Depression Around | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the World but Not Of It</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>Pizza tutoria in few sec @KyleIstook</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8768,7 +8768,7 @@
                         <div class="video-info">
                             <h3>Teaching   a Subscriber  Pizza techniques</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8779,7 +8779,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8955,7 +8955,7 @@
                         <div class="video-info">
                             <h3>Taco night left overs make an amazing pizza sandwich!</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>🔴 FORTNITE RELOAD w/ Miniminter, Ginge & Jakey !Fortnite #EpicPartner #Ad</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">14 minutes ago</div>
+                            <div class="date">39 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN PLAY FORTNITE UNTIL WE WIN</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
