--- a/index.html
+++ b/index.html
@@ -1806,7 +1806,7 @@
                     <div class="video-info">
                         <h3>Same Day Grandma Style Pizza At Home 100%</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>Testing out the jus roll supermarket pizza dough, baked on the Ooni Koda 2 #pizza #pizzadoughrecipe</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 26, 2025</div>
                     </div>
                 </a>
             </div>
@@ -3527,6 +3527,17 @@
                         <h3>How the 1% stole minimalism (then threw it away)</h3>
                         <div class="channel">Matt D'Avella</div>
                         <div class="date">Jul 31, 2025</div>
+                    </div>
+                </a>
+            </div>
+        
+            <div class="video">
+                <a href="https://www.youtube.com/shorts/u3jhidzP1-o" target="_blank">
+                    <img src="https://i.ytimg.com/vi/u3jhidzP1-o/mqdefault.jpg" alt="Vikkstar Tomorrowland Crowd Surf 🫡 #tomorrowland #edm #vikkstar #sidemen #steveaoki">
+                    <div class="video-info">
+                        <h3>Vikkstar Tomorrowland Crowd Surf 🫡 #tomorrowland #edm #vikkstar #sidemen #steveaoki</h3>
+                        <div class="channel">Vikkstar123</div>
+                        <div class="date">Jul 30, 2025</div>
                     </div>
                 </a>
             </div>
@@ -8911,7 +8922,7 @@
                         <div class="video-info">
                             <h3>Same Day Grandma Style Pizza At Home 100%</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -8977,7 +8988,7 @@
                         <div class="video-info">
                             <h3>Testing out the jus roll supermarket pizza dough, baked on the Ooni Koda 2 #pizza #pizzadoughrecipe</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 26, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9969,6 +9980,17 @@
                             <h3>🔴 BATTLEFIELD 6 w/ Zerkaa, Behzinga & AngryGinge</h3>
                             <div class="channel">Vikkstar123</div>
                             <div class="date">Jul 31, 2025</div>
+                        </div>
+                    </a>
+                </div>
+            
+                <div class="video">
+                    <a href="https://www.youtube.com/shorts/u3jhidzP1-o" target="_blank">
+                        <img src="https://i.ytimg.com/vi/u3jhidzP1-o/mqdefault.jpg" alt="Vikkstar Tomorrowland Crowd Surf 🫡 #tomorrowland #edm #vikkstar #sidemen #steveaoki">
+                        <div class="video-info">
+                            <h3>Vikkstar Tomorrowland Crowd Surf 🫡 #tomorrowland #edm #vikkstar #sidemen #steveaoki</h3>
+                            <div class="channel">Vikkstar123</div>
+                            <div class="date">Jul 30, 2025</div>
                         </div>
                     </a>
                 </div>
