--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Turn Depression Around | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Stop Misusing Keltner Channels ❌ (You’re Doing It Wrong)</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The Best Milk Alternative | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the World but Not Of It</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Science of Mantras | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Stop Misusing Keltner Channels ❌ (You’re Doing It Wrong)</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Turn Depression Around | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Best Milk Alternative | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the World but Not Of It</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7315,7 +7315,7 @@
                         <div class="video-info">
                             <h3>Science of Mantras | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
