--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Stop Waiting for Happiness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Piyush Pandey Explores Spirituality & Consumerism with Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Stop Waiting for Happiness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Piyush Pandey Explores Spirituality & Consumerism with Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
