--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Trading Strategies: Bollinger Bands and Moving Averages #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 minutes ago</div>
+                        <div class="date">18 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -141,9 +141,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=o3Ty3DjUpDU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/o3Ty3DjUpDU/mqdefault.jpg" alt="Piyush Pandey Explores Spirituality & Consumerism with Sadhguru">
+                    <img src="https://i.ytimg.com/vi/o3Ty3DjUpDU/mqdefault.jpg" alt="Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback">
                     <div class="video-info">
-                        <h3>Piyush Pandey Explores Spirituality & Consumerism with Sadhguru</h3>
+                        <h3>Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback</h3>
                         <div class="channel">Sadhguru</div>
                         <div class="date">2 hours ago</div>
                     </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Turn Depression Around | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Trading Strategies: Bollinger Bands and Moving Averages #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 minutes ago</div>
+                            <div class="date">18 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7245,9 +7245,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=o3Ty3DjUpDU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/o3Ty3DjUpDU/mqdefault.jpg" alt="Piyush Pandey Explores Spirituality & Consumerism with Sadhguru">
+                        <img src="https://i.ytimg.com/vi/o3Ty3DjUpDU/mqdefault.jpg" alt="Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback">
                         <div class="video-info">
-                            <h3>Piyush Pandey Explores Spirituality & Consumerism with Sadhguru</h3>
+                            <h3>Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">2 hours ago</div>
                         </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Turn Depression Around | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
