--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>90% Winning Rate Is Useless. Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Trading Strategies: Bollinger Bands and Moving Averages #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Stop Waiting for Happiness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2294,7 +2294,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN DRIVING TEST</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 27, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2455,9 +2455,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=cOAHpEfOrR4" target="_blank">
-                    <img src="https://i.ytimg.com/vi/cOAHpEfOrR4/mqdefault.jpg" alt="Master Pro Level Ball Striking In 15 Minutes, Not 15 Years">
+                    <img src="https://i.ytimg.com/vi/cOAHpEfOrR4/mqdefault.jpg" alt="Master Pro Golf Ball Striking In 15 Minutes, Not 15 Years">
                     <div class="video-info">
-                        <h3>Master Pro Level Ball Striking In 15 Minutes, Not 15 Years</h3>
+                        <h3>Master Pro Golf Ball Striking In 15 Minutes, Not 15 Years</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Sep 22, 2025</div>
                     </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>90% Winning Rate Is Useless. Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Trading Strategies: Bollinger Bands and Moving Averages #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Stop Waiting for Happiness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Ad Legend Piyush Pandey Explores Spirituality & Consumerism with Sadhguru #Throwback</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9474,9 +9474,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=cOAHpEfOrR4" target="_blank">
-                        <img src="https://i.ytimg.com/vi/cOAHpEfOrR4/mqdefault.jpg" alt="Master Pro Level Ball Striking In 15 Minutes, Not 15 Years">
+                        <img src="https://i.ytimg.com/vi/cOAHpEfOrR4/mqdefault.jpg" alt="Master Pro Golf Ball Striking In 15 Minutes, Not 15 Years">
                         <div class="video-info">
-                            <h3>Master Pro Level Ball Striking In 15 Minutes, Not 15 Years</h3>
+                            <h3>Master Pro Golf Ball Striking In 15 Minutes, Not 15 Years</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Sep 22, 2025</div>
                         </div>
@@ -9781,7 +9781,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN DRIVING TEST</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 27, 2025</div>
                         </div>
                     </a>
                 </div>
